DevIO.Auth/k8s/auth-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth-api
  template:
    metadata:
      labels:
        app: auth-api
    spec:
      containers:
        - name: auth-api
          image: seu-usuario/auth-api:latest  ## aqui é onde você coloca seu login do Docker Hub e imagem da API de autenticação
          ports:
            - containerPort: 80
