DevIO.Auth/k8s/auth-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: auth-service
spec:
  selector:
    app: auth-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
